fix stories image on mobile

--- a/VNZIP/newnew/assets/css/sponsor-child.css
+++ b/VNZIP/newnew/assets/css/sponsor-child.css
@@ -11,6 +11,7 @@
 
 .sponsor-child-submit {
     font-size: 17px;
+    white-space: normal;
 }
 
 @media screen and (max-width: 768px) {
