--- a/VNZIP/newnew/assets/css/stories.css
+++ b/VNZIP/newnew/assets/css/stories.css
@@ -26,6 +26,7 @@
 .stories .stories-image-container {
     padding-bottom: 60%;
     overflow: hidden;
+    position: relative;
 }
 
 .stories .stories-image-container img{
